--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+
+  <!-- Make all relative links resolve under /html-portfolio/ on GitHub Pages -->
+  <base href="/html-portfolio/">
+  <style>
+    body { font-family: system-ui, Arial, sans-serif; line-height: 1.5; max-width: 900px; margin: 40px auto; padding: 0 16px; }
+    .projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; }
+    .card { border: 1px solid #e5e7eb; border-radius: 12px; padding: 16px; text-decoration: none; color: inherit; }
+    .card img { display: block; width: 100%; height: auto; border-radius: 8px; }
+    .card h3 { margin: 12px 0 0 0; font-size: 1.1rem; }
+    nav a { margin-right: 12px; }
+  </style>
 </head>
 <body>
-    <h1>Raul's Garcia Portfolio</h1>
-    <h2>Im a Web Developer</h2>
+  <header>
+    <h1>Raul Garcia — Portfolio</h1>
+    <h2>I’m a Web Developer</h2>
+    <nav>
+      <a href="public/about.html">About</a>
+      <a href="public/contact.html">Contact</a>
+    </nav>
     <hr />
-    <h1><a href="../2.4 Movie Ranking Project/">Movie Ranking Project</h1><img src="../2.4 Movie Ranking Project/Movie Ranking Project.png"width = "400"></a>
-    <h2><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project<img src="../3.4 Birthday Invite Project/Birthday-Invite-img.png" width="500"></a></h2>
-</br>
-<a href="../4.1Webpages/public/about.html">About</a>
-<a href="../4.1Webpages/public/contact.html">Contact</a>
-<h2></h2>
+  </header>
+
+  <section class="projects">
+    <!-- Movie Ranking Project -->
+    <a class="card" href="2.4%20Movie%20Ranking%20Project/index.html">
+      <img src="assets/images/movie-ranking.png" alt="Screenshot of the Movie Ranking Project" />
+      <h3>Movie Ranking Project</h3>
+    </a>
+
+    <!-- Birthday Invite Project -->
+    <a class="card" href="3.4%20Birthday%20Invite%20Project/index.html">
+      <img src="assets/images/birthday-invite.png" alt="Screenshot of the Birthday Invite Project" />
+      <h3>Birthday Invite Project</h3>
+    </a>
+  </section>
 </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
