--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
+<p>Tel: +1 8324431893</p>
+<p>Email:raul.garcia.1627@gmail.com</p>
+<p>Address:16041 E Channelview dr, Channelview TX</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  16041 E Channelview dr, Channelview TX<br />
+  Channelview , TX<br />
+  U.S.A. <br />
 </p>
