--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <section class="projects">
     <!-- Movie Ranking Project -->
-    <a class="card" href="2.4-Movie-Ranking-Project/index.html">
+    <a class="card" href="https://github.com/Raul-Garcia-Portfolio/Movie-Ranking">
       <img src="assets/images/movie-ranking.png" alt="Screenshot of the Movie Ranking Project" />
       <h3>Movie Ranking Project</h3>
     </a>
