--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </a>
 
     <!-- Birthday Invite Project -->
-    <a class="card" href="3.4-Birthday-Invite-Project/index.html">
+    <a class="card" href="https://github.com/Raul-Garcia-Portfolio/Birthday-Site">
       <img src="assets/images/birthday-invite.png" alt="Screenshot of the Birthday Invite Project" />
       <h3>Birthday Invite Project</h3>
     </a>
