--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 
   <section class="projects">
     <!-- Movie Ranking Project -->
-    <a class="card" href="https://github.com/Raul-Garcia-Portfolio/Movie-Ranking">
+    <a class="card" href="https://raul-garcia-portfolio.github.io/Movie-Ranking/">
       <img src="assets/images/movie-ranking.png" alt="Screenshot of the Movie Ranking Project" />
       <h3>Movie Ranking Project</h3>
     </a>
 
     <!-- Birthday Invite Project -->
-    <a class="card" href="https://github.com/Raul-Garcia-Portfolio/Birthday-Site">
+    <a class="card" href="https://raul-garcia-portfolio.github.io/Birthday-Site">
       <img src="assets/images/birthday-invite.png" alt="Screenshot of the Birthday Invite Project" />
       <h3>Birthday Invite Project</h3>
     </a>
