--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <section class="projects">
     <!-- Movie Ranking Project -->
-    <a class="card" href="https://raul-garcia-portfolio.github.io/Movie-Ranking/">
+    <a class="card" href="https://raul-garcia-portfolio.github.io/Birthday-Site/">
       <img src="assets/images/movie-ranking.png" alt="Screenshot of the Movie Ranking Project" />
       <h3>Movie Ranking Project</h3>
     </a>
