--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raul Garcia Portfolio</title>
 
-  <!-- Keep all links inside your /html-portfolio/ subfolder -->
+  <!-- Keep internal links inside your /html-portfolio/ subfolder -->
   <base href="/html-portfolio/">
 
   <style>
@@ -104,13 +104,13 @@
 
   <section class="projects">
     <!-- Movie Ranking Project -->
-    <a class="card" href="https://raul-garcia-portfolio.github.io/Birthday-Site/">
+    <a class="card" href="https://raul-garcia-portfolio.github.io/Movie-Ranking-Project/" target="_blank" rel="noopener noreferrer">
       <img src="assets/images/movie-ranking.png" alt="Screenshot of the Movie Ranking Project" />
       <h3>Movie Ranking Project</h3>
     </a>
 
     <!-- Birthday Invite Project -->
-    <a class="card" href="https://raul-garcia-portfolio.github.io/Birthday-Site">
+    <a class="card" href="https://raul-garcia-portfolio.github.io/Birthday-Site/" target="_blank" rel="noopener noreferrer">
       <img src="assets/images/birthday-invite.png" alt="Screenshot of the Birthday Invite Project" />
       <h3>Birthday Invite Project</h3>
     </a>
