--- a/index.html
+++ b/index.html
@@ -104,14 +104,20 @@
 
   <section class="projects">
     <!-- Movie Ranking Project -->
-    <a class="card" href="https://raul-garcia-portfolio.github.io/Movie-Ranking-Project/" target="_blank" rel="noopener noreferrer">
-      <img src="assets/images/movie-ranking.png" alt="Screenshot of the Movie Ranking Project" />
+    <a class="card"
+       href="https://raul-garcia-portfolio.github.io/Movie-Ranking/"
+       target="_blank" rel="noopener noreferrer">
+      <img src="assets/images/movie-ranking.png"
+           alt="Screenshot of the Movie Ranking Project" />
       <h3>Movie Ranking Project</h3>
     </a>
 
     <!-- Birthday Invite Project -->
-    <a class="card" href="https://raul-garcia-portfolio.github.io/Birthday-Site/" target="_blank" rel="noopener noreferrer">
-      <img src="assets/images/birthday-invite.png" alt="Screenshot of the Birthday Invite Project" />
+    <a class="card"
+       href="https://raul-garcia-portfolio.github.io/Birthday-Site/"
+       target="_blank" rel="noopener noreferrer">
+      <img src="assets/images/birthday-invite.png"
+           alt="Screenshot of the Birthday Invite Project" />
       <h3>Birthday Invite Project</h3>
     </a>
   </section>
