--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,81 @@
-<h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Raul Garcia</title>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+  <base href="/html-portfolio/">
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+  <style>
+    body {
+      font-family: system-ui, Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 16px;
+      background-color: #fafafa;
+      color: #333;
+    }
+
+    header, footer {
+      text-align: center;
+    }
+
+    h1 {
+      color: #0077cc;
+    }
+
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    nav a {
+      margin: 0 10px;
+    }
+
+    section {
+      margin-top: 30px;
+    }
+
+    footer {
+      margin-top: 40px;
+      color: #555;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>About Me</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="public/contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section>
+    <p>Hi, I’m <strong>Raul Garcia</strong> — a passionate web developer who loves building clean, functional, and responsive websites. 
+    I enjoy creating modern interfaces that blend solid design with smooth user experiences. My projects often focus on small business websites, portfolios, and creative landing pages.</p>
+
+    <p>I started web development to bring ideas to life on the web. Over time, I’ve gained experience in <strong>HTML, CSS, JavaScript, and PHP</strong>, and I’m expanding into more advanced front-end and back-end technologies.</p>
+
+    <p>I also have a background in <strong>Microsoft technologies (MS)</strong> and system administration, which helps me understand both the creative and technical sides of modern web projects.</p>
+
+    <p>When I’m not coding, I’m learning new tools, designing layouts, or exploring ways to grow my business — <strong>404 Studios</strong>.</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Raul Garcia. All rights reserved.</p>
+  </footer>
+</body>
+</html>
